<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/s30dp"
    android:layout_marginRight="@dimen/s30dp"
    android:background="@drawable/background_border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/s20dp"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/s85dp"
                android:layout_height="@dimen/s85dp"
                android:src="@drawable/ic_remove" />

            <com.media.convert.videotomp3aacc.utils.FontTextView
                android:layout_marginLeft="@dimen/s10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_title"
                android:textColor="@color/colortext"
                android:textSize="@dimen/s45sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/s8dp"
            android:layout_marginTop="@dimen/s10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.media.convert.videotomp3aacc.utils.FontTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/s10dp"
                android:text="@string/remove"
                android:textColor="@color/colortext"
                android:textSize="@dimen/s30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_not_now"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/s20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/s10dp"
                android:paddingTop="@dimen/s10dp"
                android:text="@string/cancel"
                android:textColor="@color/colortext"
                android:textSize="@dimen/s22sp" />

            <TextView
                android:id="@+id/tv_rate_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/s20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/s10dp"
                android:paddingTop="@dimen/s10dp"
                android:text="@string/ok"
                android:textColor="@color/colortext"
                android:textSize="@dimen/s22sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>